# ai-capstone-sem-4

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_training.py
.claude/: settings.local.json
.streamlit/: config.toml
models/: credit_risk_model_v2.pkl
notebooks/: train_process.ipynb
report/: main.tex
src/: __init__.py  data.py  predict.py  preprocess.py  train.py
tests/: test_pipeline.py
